--- a/style.css
+++ b/style.css
@@ -1,11 +1,29 @@
 h1{
-	color: orange;
+	color: blue;
 	text-align: center;
-	border: 5px red;
+	border: 5px solid orange;
+	background: yellow;
 }
 .main{
+	display: flex;
+	width: auto;
+	height: 500px;
+	border: 5px solid red;
+	background: orange;
+
+}
+.main>div{
+	margin: auto;
+	background: orange;
+	width: auto;
+	height: 400px;
 	text-align: center;
-	width: 80%;
-	height: 10%;
-	border: 2px solid red;
+}
+#poto{
+	width: 200px;
+	height: 300px;
+	border-radius: 150px;
+}
+*{
+	background-color: darkpink;
 }
