--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@
 	height: 700px;
 	border: 5px solid red;
 	background: orange;
-	padding: 0 10px 10px 10px;
+	padding: 10px 10px 10px 10px;
 
 }
 .main>div{
 	margin: top;
-	background: white;
+	
 	width: auto;
 	height: 300px;
 	border: 2px solid black;
